trabalhando com fontes

--- a/projeto-pagina-de-receita/index.html
+++ b/projeto-pagina-de-receita/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
   <link rel="stylesheet" href="style.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,11 +23,12 @@
     <main>
 
       <section id="about">
-        <h1>Capcake</h1>
+        <h1>Cupcake de Bulbassauro</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita cum illum similique, debitis perferendis, voluptatibus explicabo quis eos unde non hic labore maiores dolor ipsam. Excepturi nostrum pariatur autem corrupti?</p>
       </section>
 
       <section id="ingredients">
+        <h2>Ingredientes</h2>
         <ul>
           <li>Lorem ipsum dolor,</li>
           <li>sit amet consectetur</li>
@@ -41,11 +48,14 @@
       </section>
 
       <section id="preparation">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, adipisci beatae labore dignissimos omnis velit blanditiis, officia cupiditate enim rerum quos hic molestias tempora incidunt et a tenetur maxime debitis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus molestiae perferendis, aspernatur eaque praesentium qui odit deserunt ducimus. Accusamus necessitatibus et voluptatibus nesciunt cumque nam quasi ratione quam, odit expedita.
-        <br><br>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus ipsa, sapiente at delectus provident autem molestiae illum officiis nemo exercitationem dicta aspernatur architecto reprehenderit iste, distinctio consequuntur a deleniti nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus modi obcaecati beatae. Nam quae culpa impedit sapiente quasi recusandae quaerat quidem expedita exercitationem repudiandae. Omnis itaque optio sint modi.
-        <br><br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci neque corrupti quia asperiores sunt, dolorem enim, labore at delectus aspernatur quaerat unde suscipit laudantium, nesciunt cumque nemo aliquid tempore maxime.
+        <h2>Modo de Preparo</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, adipisci beatae labore dignissimos omnis velit blanditiis, officia cupiditate enim rerum quos hic molestias tempora incidunt et a tenetur maxime debitis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus molestiae perferendis, aspernatur eaque praesentium qui odit deserunt ducimus. Accusamus necessitatibus et voluptatibus nesciunt cumque nam quasi ratione quam, odit expedita.
+          <br><br>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus ipsa, sapiente at delectus provident autem molestiae illum officiis nemo exercitationem dicta aspernatur architecto reprehenderit iste, distinctio consequuntur a deleniti nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus modi obcaecati beatae. Nam quae culpa impedit sapiente quasi recusandae quaerat quidem expedita exercitationem repudiandae. Omnis itaque optio sint modi.
+          <br><br>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci neque corrupti quia asperiores sunt, dolorem enim, labore at delectus aspernatur quaerat unde suscipit laudantium, nesciunt cumque nemo aliquid tempore maxime.
+        </p>
       </section>
     </main>
   </div>
