--- a/projeto-pagina-de-receita/index.html
+++ b/projeto-pagina-de-receita/index.html
@@ -59,6 +59,12 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com 
+    <img src="assets/acorn.svg" alt="">
+    por Gustavo Fontenele
+  </footer>
 </body>
 
 </html>
