initial style guide

--- a/projeto-pagina-de-viagem/index.html
+++ b/projeto-pagina-de-viagem/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
   <main>
-    <header></header>
-    <section></section>
+    <header>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed molestias tempore doloremque autem officia incidunt modi explicabo possimus numquam, nam accusantium ratione voluptatum quisquam quod odio a veritatis dicta nemo.</p>
+    </header>
+    
+    <section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fuga, aut laboriosam tenetur voluptas veniam recusandae soluta consectetur neque nisi, excepturi ipsa cupiditate numquam ratione nobis, amet in? Mollitia, deserunt?</p>
+    </section>
   </main>
 </body>
 </html>
