--- a/projeto-pagina-de-viagem/index.html
+++ b/projeto-pagina-de-viagem/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Gram</title>
 
   <link rel="stylesheet" href="./styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Alice&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
   <main>
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo">
+          <img src="assets/pokeball.png" alt="simbolo de uma pokebola">
+        </a>
+
+        <ul>
+          <li><a href="#">
+              <img src="assets/icons/search.png" alt="imagem de lupa">
+            </a></li>
+          <li><a href="#">Explorer</a></li>
+          <li><a href="#">Minhas Viagens</a></li>
+          <li><a href="#">
+              <img src="assets/pessoa.png" alt="Imagem de um Marstomp">
+            </a></li>
+        </ul>
+      </nav>
+    </div>
     <header>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed molestias tempore doloremque autem officia incidunt modi explicabo possimus numquam, nam accusantium ratione voluptatum quisquam quod odio a veritatis dicta nemo.</p>
     </header>
-    
-    <section>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fuga, aut laboriosam tenetur voluptas veniam recusandae soluta consectetur neque nisi, excepturi ipsa cupiditate numquam ratione nobis, amet in? Mollitia, deserunt?</p>
-    </section>
   </main>
 </body>
+
 </html>
