done main about and footer

--- a/projeto-pagina-de-viagem/index.html
+++ b/projeto-pagina-de-viagem/index.html
@@ -16,29 +16,74 @@
 </head>
 
 <body>
-  <main>
-    <div class="bg-surface-color">
-      <nav class="container">
-        <a href="#" id="logo">
-          <img src="assets/pokeball.png" alt="simbolo de uma pokebola">
-        </a>
+  <div class="bg-surface-color">
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="assets/pokeball.png" alt="simbolo de uma pokebola">
+      </a>
 
-        <ul>
-          <li><a href="#">
-              <img src="assets/icons/search.png" alt="imagem de lupa">
-            </a></li>
-          <li><a href="#">Explorer</a></li>
-          <li><a href="#">Minhas Viagens</a></li>
-          <li><a href="#">
-              <img src="assets/pessoa.png" alt="Imagem de um Marstomp">
-            </a></li>
+      <ul>
+        <li><a href="#">
+            <img src="assets/icons/search.png" alt="imagem de lupa">
+          </a></li>
+        <li><a href="#">Explorer</a></li>
+        <li><a href="#">Minhas Viagens</a></li>
+        <li><a href="#">
+            <img src="assets/pessoa.png" alt="Imagem de um Marstomp">
+          </a></li>
+      </ul>
+    </nav>
+
+    <section>
+      <div class="container">
+        <div id="about-me">
+          <img src="assets/pessoa.png" alt="imagem pessoal" class="icone-pessoal">
+          <div id="descricao-pessoal">
+            <h1>Gustavo Fontenele</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, corrupti? Et iusto minus ad cumque suscipit sequi id labore temporibus, inventore assumenda! Facilis alias magnam tempora commodi eaque cum dignissimos.</p>
+          </div>
+        </div>
+
+        <ul id="infos">
+          <li>
+            <img src="assets/icons/maps-and-flags.png" alt="icone de ponteiro em mapa">
+            <span>Mundo Pokemon</span>
+          </li>
+
+          <li>
+            <img src="assets/icons/plane.png" alt="icone de aviao">
+            <span>8 Regiões</span>
+          </li>
+
+          <li>
+            <img src="assets/icons/image.png" alt="icone de imagens">
+            <span>150 Fotos</span>
+          </li>
         </ul>
-      </nav>
-    </div>
-    <header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed molestias tempore doloremque autem officia incidunt modi explicabo possimus numquam, nam accusantium ratione voluptatum quisquam quod odio a veritatis dicta nemo.</p>
-    </header>
-  </main>
+      </div>
+    </section>
+
+    <main class="container">
+      <img src="assets/images/image (1).jpg" alt="vila de pallet">
+      <img src="assets/images/image (1).png" alt="casa em pallet town">
+      <img src="assets/images/image (2).jpg" alt="farol">
+      <img src="assets/images/image (2).png" alt="regiao de alola">
+      <img src="assets/images/image (3).jpg" alt="porto em kanto">
+      <img src="assets/images/image (3).png" alt="foto em alola">
+      <img src="assets/images/image (4).jpg" alt="planalto indigo">
+      <img src="assets/images/image (5).jpg" alt="foto em kalos">
+      <img src="assets/images/image (5).png" alt="regiao de sinnoh">
+      <img src="assets/images/image (6).jpg" alt="regiao de paldea">
+      <img src="assets/images/image (6).png" alt="regiao de unova">
+      <img src="assets/images/image (4).png" alt="parque em unova">
+    </main>
+
+    <footer class="container">
+      <span>TravelGram &copy; 2025</span>
+      <span>Termos De Uso</span>
+      <span>Politica de Privacidade</span>
+    </footer>
+  </div>
 </body>
 
 </html>
